# fat_io_lib

./: CMakeLists.txt  README.md
include/fat/: fat_list.h
src/: fat_access.c  fat_filelib.c
